@@ -14,6 +14,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
@@ -29,14 +30,13 @@ public class FollowService {
     // 팔로우 기능
     @Transactional
     public void follow(String followerUsername, String memberUsername) {
+        Long followerId = getMemberIdByUsername(followerUsername);
+        Long memberId = getMemberIdByUsername(memberUsername);
+
         // 팔로우 대상과 팔로워가 존재하는지 확인
-        FormUserEntity followerUser = formUserRepository.findByUsername(followerUsername)
+        MemberEntity follower = memberRepository.findById(followerId)
                 .orElseThrow(() -> new IllegalArgumentException("팔로워를 찾을 수 없습니다."));
-        FormUserEntity memberUser = formUserRepository.findByUsername(memberUsername)
-                .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다."));
-        MemberEntity follower = memberRepository.findById(followerUser.getMemberEntity().getMemberId())
-                .orElseThrow(() -> new IllegalArgumentException("팔로워를 찾을 수 없습니다."));
-        MemberEntity member = memberRepository.findById(memberUser.getMemberEntity().getMemberId())
+        MemberEntity member = memberRepository.findById(memberId)
                 .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다."));
 
         // 이미 팔로우된 상태인지 확인
@@ -54,14 +54,13 @@ public class FollowService {
     // 언팔로우 기능
     @Transactional
     public void unfollow(String followerUsername, String memberUsername) {
+        Long followerId = getMemberIdByUsername(followerUsername);
+        Long memberId = getMemberIdByUsername(memberUsername);
+
         // 팔로우 대상과 팔로워가 존재하는지 확인
-        FormUserEntity followerUser = formUserRepository.findByUsername(followerUsername)
+        MemberEntity follower = memberRepository.findById(followerId)
                 .orElseThrow(() -> new IllegalArgumentException("팔로워를 찾을 수 없습니다."));
-        FormUserEntity memberUser = formUserRepository.findByUsername(memberUsername)
-                .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다."));
-        MemberEntity follower = memberRepository.findById(followerUser.getMemberEntity().getMemberId())
-                .orElseThrow(() -> new IllegalArgumentException("팔로워를 찾을 수 없습니다."));
-        MemberEntity member = memberRepository.findById(memberUser.getMemberEntity().getMemberId())
+        MemberEntity member = memberRepository.findById(memberId)
                 .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다."));
 
         // 팔로우 상태가 아닌지 확인
@@ -75,51 +74,84 @@ public class FollowService {
 
     // {memberId}를 팔로우하는 팔로워 계정 목록 조회
     public List<FollowDto> getFollowers(String memberUsername) {
-        FormUserEntity memberUser = formUserRepository.findByUsername(memberUsername)
-                .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다."));
-        MemberEntity member = memberUser.getMemberEntity();
+        // memberId를 통해 팔로워 조회
+        MemberEntity member = formUserRepository.findByUsername(memberUsername)
+                .orElseThrow(() -> new IllegalArgumentException("해당 유저가 없습니다"))
+                .getMemberEntity();
 
         List<FollowsEntity> followsEntities = followsRepository.findAllByMember(member);
 
-        return followsEntities.stream()
-                .map(this::createFollowDTO)
-                .collect(Collectors.toList());
+        // follower와 member의 닉네임을 조회하여 DTO에 담기
+        List<FollowDto> followerDTOs = followsEntities.stream().map(f -> {
+            String followerNickname = formUserRepository.findById(f.getFollower().getMemberId())
+                    .orElseThrow(() -> new IllegalArgumentException("팔로워 정보가 없습니다"))
+                    .getNickname();
+
+            String memberNickname = formUserRepository.findById(f.getMember().getMemberId())
+                    .orElseThrow(() -> new IllegalArgumentException("회원 정보가 없습니다"))
+                    .getNickname();
+
+            return new FollowDto(f.getFollower().getMemberId(), f.getMember().getMemberId(), followerNickname, memberNickname);
+        }).toList();
+
+        return followerDTOs;
     }
 
     // {followerId}가 팔로우하는 계정 목록 조회
     public List<FollowDto> getFollowing(String memberUsername) {
-        FormUserEntity memberUser = formUserRepository.findByUsername(memberUsername)
-                .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다."));
-        MemberEntity member = memberUser.getMemberEntity();
+        // memberId를 통해 팔로워 조회
+        MemberEntity member = formUserRepository.findByUsername(memberUsername)
+                .orElseThrow(() -> new IllegalArgumentException("해당 유저가 없습니다"))
+                .getMemberEntity();
 
         List<FollowsEntity> followsEntities = followsRepository.findAllByFollower(member);
 
-        return followsEntities.stream()
-                .map(this::createFollowDTO)
-                .collect(Collectors.toList());
+        // follower와 member의 닉네임을 조회하여 DTO에 담기
+        List<FollowDto> followerDTOs = followsEntities.stream().map(f -> {
+            String followerNickname = formUserRepository.findById(f.getFollower().getMemberId())
+                    .orElseThrow(() -> new IllegalArgumentException("팔로워 정보가 없습니다"))
+                    .getNickname();
+
+            String memberNickname = formUserRepository.findById(f.getMember().getMemberId())
+                    .orElseThrow(() -> new IllegalArgumentException("회원 정보가 없습니다"))
+                    .getNickname();
+
+            return new FollowDto(f.getFollower().getMemberId(), f.getMember().getMemberId(), followerNickname, memberNickname);
+        }).toList();
+
+        return followerDTOs;
     }
 
     private FollowDto createFollowDTO(FollowsEntity follows) {
         String followerUsername = formUserRepository.findByMemberEntity(follows.getFollower())
                 .map(FormUserEntity::getUsername)
-                .orElseThrow(() -> new IllegalArgumentException("팔로워 정보를 찾을 수 없습니다."));
+                .orElseGet(() ->
+                        oAuth2UserRepository.findByMemberEntity(follows.getFollower())
+                                .map(OAuth2UserEntity::getUsername)
+                                .orElseThrow(() -> new IllegalArgumentException("팔로워 정보를 찾을 수 없습니다."))
+                );
 
         String memberUsername = formUserRepository.findByMemberEntity(follows.getMember())
                 .map(FormUserEntity::getUsername)
-                .orElseThrow(() -> new IllegalArgumentException("팔로우 대상 정보를 찾을 수 없습니다."));
+                .orElseGet(() ->
+                        oAuth2UserRepository.findByMemberEntity(follows.getMember())
+                                .map(OAuth2UserEntity::getUsername)
+                                .orElseThrow(() -> new IllegalArgumentException("팔로우 대상 정보를 찾을 수 없습니다."))
+                );
 
-        return new FollowDto(follows.getFollowsId(), followerUsername, memberUsername);
+        return new FollowDto(follows.getFollower().getMemberId(), follows.getMember().getMemberId(), followerUsername, memberUsername);
     }
 
-    private String getUsernameByMemberId(Long memberId) {
-        MemberEntity member = memberRepository.findById(memberId)
-                .orElseThrow(() -> new IllegalArgumentException("Member를 찾을 수 없습니다."));
-
-        return formUserRepository.findByMemberEntity(member)
-                .map(FormUserEntity::getUsername)
-                .orElseGet(() -> oAuth2UserRepository.findByMemberEntity(member)
-                .map(OAuth2UserEntity::getUsername)
-                .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다.")));
+    // username을 통해 memberId를 조회하는 메서드
+    private Long getMemberIdByUsername(String username) {
+        return formUserRepository.findByUsername(username)
+                .map(FormUserEntity::getMemberEntity)
+                .map(MemberEntity::getMemberId)
+                .orElseGet(() ->
+                        oAuth2UserRepository.findByUsername(username)
+                        .map(OAuth2UserEntity::getMemberEntity)
+                        .map(MemberEntity::getMemberId)
+                        .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다."))
+                );
     }
-
 }
